--- a/index.html
+++ b/index.html
@@ -1,12 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML homework</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>HTML homework</title>
 </head>
+
 <body>
-<h1>Wairol</h1>
+	<header>
+		<img src="img/tesla_logo.png" alt="tesla logo" height="61" width="62">
+    </header>
+		<hr>
+		<nav>
+			<a href="#models">Model S</a>
+			<a href="#model3">Model 3</a>
+			<a href="#modelx">Model X</a>
+		</nav>
+		<hr>
+		<section>
+			<h1> About </h1>
+			<p>Tesla was founded in 2003 by a group of engineers who wanted to prove
+				that people didn’t need to compromise to drive electric – that electric vehicles can be better,
+				quicker and more fun to drive than gasoline cars. Today, Tesla builds not only all-electric
+				vehicles but also infinitely scalable clean energy generation and storage products. Tesla believes the
+				faster the world stops relying on fossil fuels and moves towards a zero-emission future, the better.
+				Launched in 2008, the Roadster unveiled Tesla’s cutting-edge battery technology and electric powertrain.
+				From there, Tesla designed the world’s first ever premium all-electric sedan from the ground up –
+				Model S – which has become the best car in its class in every category. Combining safety, performance,
+				and efficiency, Model S has reset the world’s expectations for the car of the 21st century with the
+				longest range of any electric vehicle, over-the-air software updates that make it better over time, and
+				a record
+				0-60 mph acceleration time of 2.28 seconds as measured by Motor Trend. In 2015, Tesla expanded its
+				product line with Model X, the safest, quickest and most capable sport utility vehicle in history that
+				holds 5-star safety ratings across every category from the National Highway Traffic Safety
+				Administration.
+				Completing CEO Elon Musk’s “Secret Master Plan,” in 2016, Tesla introduced Model 3, a low-priced,
+				high-volume
+				electric vehicle that began production in 2017. Soon after, Tesla unveiled the safest, most comfortable
+				truck
+				ever – Tesla Semi – which is designed to save owners at least $200,000 over a million miles based on
+				fuel costs alone.</p>
+		</section>
+		<section id="models">
+			<h2>Model S</h2>
+			<br>
+			<img src="img/models.jpg" alt="Model S">
+    </section>
+			<section id="model3">
+				<h2>Model 3</h2>
+				<br>
+				<img src="img/model3.png" alt="Model 3">
+    </section>
+				<section id="modelx">
+					<h2>Model X</h2>
+					<br>
+					<video src="vid/ModelX.mp4" poster="img/modelx.jpg" controls height="600" width="600">Your browser
+						does not
+						support the video tag.</video>
+				</section>
+				<h3>Tesla's other products:</h3>
+					<ol>
+						<li>Tesla Semi</li>
+						<li>Tesla Model Y</li>
+					</ol>
+					<table>
+						<tr>
+							<th colspan=3>Number of Tesla vehicles delivered worldwide</th>
+						</tr>
+						<tr>
+							<td>Q1</td>
+							<td>Q2</td>
+							<td>Q3</td>
+						</tr>
+                        <tr>
+						<td>63000</td>
+						<td>95200</td>
+						<td>97000</td>
+                        </tr>
+					</table>
+					<br>
+					<br>
+					<a href="form.html">Questionnaire</a>
+					<hr>
+					<footer>
+						<p> &copy;All rights are not reserved, 2019 </p>
+					</footer>
+
 </body>
+
 </html>
