--- a/form.html
+++ b/form.html
@@ -15,19 +15,16 @@
 
 	<section>
 		<h1>Questionnaire</h1>
-		<form
-        action="https://formspree.io/xqkzyrrb"
-        method="POST"
-        >
+		<form action="https://formspree.io/xqkzyrrb" method="POST">
 			<label>
-            Your Name:<br>
-            <input type="text" name="yourname" placeholder="Your Name" required>
-         </label>
+                Your Name:<br>
+                <input type="text" name="yourname" placeholder="Your Name" required>
+            </label>
 			<br>
 			<br>
 			<label>
-            Email:<br>
-            <input type="email" name="email" placeholder="Email" required>
+                Email:<br>
+                <input type="email" name="email" placeholder="Email" required>
         </label>
 			<br>
 			<br>
@@ -44,8 +41,8 @@
             <input type="radio" name="gender" value="oher">Other
         </label>
 
-		<h1>Choose the right answer bellow:</h1>
-		<label>
+			<h1>Choose the right answer bellow:</h1>
+			<label>
             What was the previous page about?
             <br>
             <select name="vehicle">
@@ -54,18 +51,18 @@
                 <option value="planes">Planes</option>
             </select>
         </label>
-		<br>
-		<br>
-		<label>
+			<br>
+			<br>
+			<label>
             After which company(companies) the previous page has been created?</label><br>
-            <label><input type="checkbox" name="companyname" value="bmw">BMW</label>
-            <label><input type="checkbox" name="companyname" value="lexus">Lexus</label>
-            <label><input type="checkbox" name="companyname" value="tesla">Tesla</label>
-		<br>
-		<br>
-		<label>Have all the rights been reserved?</label>
-            <br>
-        <label>
+			<label><input type="checkbox" name="companyname" value="bmw">BMW</label>
+			<label><input type="checkbox" name="companyname" value="lexus">Lexus</label>
+			<label><input type="checkbox" name="companyname" value="tesla">Tesla</label>
+			<br>
+			<br>
+			<label>Have all the rights been reserved?</label>
+			<br>
+			<label>
             <input list="rights">
             <datalist id="rights">
                 <option value="yap">
@@ -73,11 +70,11 @@
                 <option value="nope">
             </datalist>
         </label>
-		<br>
-		<br>
-		<input type="submit" value="SEND">
+			<br>
+			<br>
+			<input type="submit" value="SEND">
         </form>
-    </section>
+	</section>
 
 </body>
 
