--- a/form.html
+++ b/form.html
@@ -30,8 +30,6 @@
 			<br>
 			<label>
             Gender:
-        </label>
-			<label>
             <input type="radio" name="gender" value="male">Male
         </label>
 			<label>
@@ -54,15 +52,21 @@
 			<br>
 			<br>
 			<label>
-            After which company(companies) the previous page has been created?</label><br>
-			<label><input type="checkbox" name="companyname" value="bmw">BMW</label>
-			<label><input type="checkbox" name="companyname" value="lexus">Lexus</label>
-			<label><input type="checkbox" name="companyname" value="tesla">Tesla</label>
+            After which company(companies) the previous page has been created?
+            <br>
+            <input type="checkbox" name="companyname" value="bmw">BMW
+            </label>
+			<label>
+            <input type="checkbox" name="companyname" value="lexus">Lexus
+            </label>
+			<label>
+            <input type="checkbox" name="companyname" value="tesla">Tesla
+            </label>
 			<br>
-			<br>
-			<label>Have all the rights been reserved?</label>
 			<br>
 			<label>
+            Have all the rights been reserved?
+			<br>
             <input list="rights">
             <datalist id="rights">
                 <option value="yap">
